# codex-termux

./: .gitignore  AGENTS.md  BUILDING.md  CHANGELOG.md  CODEX_TEST_REPORT_v0.64.0.md  CODEX_TEST_REPORT_v0.64.1.md  CODEX_TEST_REPORT_v0.65.0.md  CODEX_TEST_REPORT_v0.65.1.md  CODEX_TEST_REPORT_v0.66.0.md  CODEX_TEST_REPORT_v0.72.0.md  CODEX_TEST_REPORT_v0.74.0.md  CODEX_TEST_REPORT_v0.75.0.md  CODEX_TEST_REPORT_v0.76.0.md  CODEX_TEST_REPORT_v0.77.1.md  CODEX_TEST_REPORT_v0.80.0.md  CODEX_TEST_REPORT_v0.86.0.md  CODEX_TEST_REPORT_v0.88.0.md  CODEX_TEST_REPORT_v0.91.0.md  CODEX_TEST_REPORT_v0.95.0.md  CODEX_TEST_SUITE.md  README.md  RELEASE_NOTES_0.64.0.md  RELEASE_NOTES_0.64.1.md  RELEASE_NOTES_0.65.0.md  verify-patches.sh
.github/workflows/: build-macos-latest.yml
.patch-backup-v0.61.0/: Cargo.toml  shell.rs
codex-rs/: Cargo.toml
codex-rs/.cargo/: config.toml
codex-rs/cloud-tasks/: Cargo.toml
codex-rs/codex-api/: Cargo.toml
codex-rs/codex-client/: Cargo.toml
codex-rs/core/: Cargo.toml
codex-rs/feedback/: Cargo.toml
codex-rs/linux-sandbox/: build.rs
codex-rs/lmstudio/: Cargo.toml
codex-rs/login/: Cargo.toml
codex-rs/network-proxy/: Cargo.toml
codex-rs/ollama/: Cargo.toml
codex-rs/otel/: Cargo.toml
codex-rs/responses-api-proxy/: Cargo.toml
codex-termux/: README.md
docs/: changelog.md  installation.md  openrouter-note.md  quickstart.md  termux-upgrade-checks.md  testing.md
npm-package/: README.md  package.json
patches/: README.md
test-reports/: CODEX_TEST_REPORT_v0.80.3-lts_linux.md  CODEX_TEST_REPORT_v0.80.3-lts_termux.md  README.md
(+47 files in other folders)
