[package]
name = "codex-lmstudio"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_lmstudio"
path = "src/lib.rs"


[dependencies]
codex-core = { path = "../core" }
reqwest = { workspace = true, default-features = false, features = ["json", "stream"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"] }
tracing = { version = "0.1.43", features = ["log"] }
which = "6.0"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true
